dashboard/src/index.css
/* ... */
/* sudo selectors */

.menu:hover {
  color: rgb(245, 104, 52);
}

.profile:hover {
  cursor: pointer;
}

.profile:hover .username {
  cursor: pointer;
  color: rgb(223, 91, 43);
}

.orders {
  width: 100%;
  height: 90vh;
}

.no-orders {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.no-orders .icon {
  transform: scale(4);
  color: rgb(173, 173, 173);
  display: block;
}

.no-orders p {
  margin-top: 6%;
  color: rgb(173, 173, 173);
  font-size: 1rem;
  font-weight: 300;
}

.btn {
  text-decoration: none;
  background: rgb(77, 77, 248);
  padding: 10px 20px;
  border-radius: 2px;
  color: #fff;
  margin-top: 2%;
}

.btn:hover {
  background: rgb(110, 110, 253);
}

.title {
  font-size: 1.3rem;
  font-weight: 300;
  color: rgb(71, 71, 71);
  margin-bottom: 2%;
}

.order-table table {
  width: 100%;
  border-collapse: collapse;
}

.order-table tr {
  border-top: 1px solid rgb(211, 211, 211);
  border-bottom: 1px solid rgb(211, 211, 211);
}

.order-table th {
  text-align: right;
  padding: 15px 10px;
  color: rgb(145, 145, 145);
  font-weight: 300;
  font-size: 0.8rem;
}

.order-table tr th:first-child,
.order-table tr td:first-child {
  text-align: left;
}

.order-table tr td:first-child p {
    background: rgb(255, 197, 197);
    color: rgb(233, 120, 120);
    width: 50%;
    text-align: center;
    border-radius: 2px;
}

.order-table tr td:last-child {
  font-size: 0.6rem;
}

.order-table td {
  padding: 10px 10px;
  text-align: right;
  font-weight: 400;
  font-size: 0.9rem;
  color: rgb(73, 73, 73);
}

.align-left {
  text-align: left;
}

.order-table td.profit {
  color: rgb(72, 194, 55);
}

.order-table td.loss {
  color: rgb(250, 118, 78);
}

.row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 5%;
}

.col {
  flex-basis: 33%;
}

.col h5 {
  font-size: 1.8rem;
  color: rgb(71, 71, 71);
  font-weight: 300;
}

.col h5 span {
  font-weight: 300;
  font-size: 0.9rem;
}

.col p {
  font-size: 0.8rem;
  color: rgb(153, 153, 153);
  font-weight: 300;
  margin-top: 2%;
}

.row .col:last-child h5 {
  color: rgb(72, 194, 55);
}

/* sudo selector */
.item:hover {
  cursor: pointer;
}

.username h6 {
  font-size: 1.5rem;
  font-weight: 400;
  color: rgb(83, 83, 83);
  margin-bottom: 20px;
}

.divider {
  border: none;
  background: #d1d1d1;
  height: 1px;
  margin: 20px 0;
  margin-bottom: 5%;
}

.section {
  padding-bottom: 2%;
}

.section span {
  display: flex;
  align-items: center;
  margin-bottom: 2%;
}

.section span p {
  display: inline-block;
  font-size: 1.2rem;
  font-weight: 300;
}

.section-icon {
  transform: scale(0.8);
  color: rgb(112, 112, 112);
  padding: 0;
  margin: 0;
  margin-right: 10px;
}

.data {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.data .first h3 {
  font-size: 2.5rem;
  font-weight: 300;
  color: rgb(71, 71, 71);
}

.data .first p {
  font-size: 0.8rem;
  color: rgb(136, 136, 136);
}

.data .first small {
  font-size: 0.8rem;
  color: rgb(72, 194, 55);
}

.data .first .profit {
  color: rgb(72, 194, 55);
}

.data hr {
  border-left: 0.6px solid rgb(243, 242, 242);
  height: 70px;
}

.data .second p {
  font-size: 0.8rem;
  color: rgb(136, 136, 136);
  margin-bottom: 10px;
  white-space: nowrap;
}

.data .second p span {
  display: inline;
  margin-left: 5%;
  font-size: 0.9rem;
  color: rgb(100, 100, 100);
}

.section hr {
  margin-top: 6%;
}

.topbar-container {
  width: 100%;
  height: 10vh;
  display: flex;
  align-items: center;
  box-shadow: 0px 0px 4px 2px rgb(236, 235, 235);
  box-sizing: border-box;
  z-index: 9;
}

.indices-container {
  flex-basis: 32%;
  height: 100%;
  padding: 10px 20px;
  border-right: 1px solid rgb(224, 224, 224);
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.nifty {
  flex-basis: 40%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  z-index: -2;
}

.sensex {
  flex-basis: 40%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.nifty > *,
.sensex > * {
  margin-right: 8px;
}

.index {
  font-size: 0.8rem;
  font-weight: 500;
  text-transform: uppercase;
  color: rgb(97, 97, 97);
  white-space: nowrap;
}

.index-points {
  font-size: 0.8rem;
  font-weight: 500;
  color: rgb(223, 73, 73);
}

.percent {
  font-size: 0.8rem;
  font-weight: 400;
  color: rgb(146, 146, 146);
}

/* sudo selectors */
.index:hover {
  cursor: pointer;
}

.watchlist-container {
  flex-basis: 32%;
  height: calc(100vh - 60px);
  box-sizing: border-box;
  box-shadow: 0px 0px 4px 1px rgb(236, 235, 235);
  overflow-y: auto;
  position: relative;
  display: flex;
  flex-direction: column;
}

.search-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  position: relative;
}

.search {
  width: 100%;
  height: 6%;
  border: none;
  padding: 15px 20px;
  font-size: 0.9rem;
  font-weight: 400;
  color: rgb(241, 241, 241);
  border-bottom: 0.8px solid rgb(235, 234, 234);
}

.counts {
  position: absolute;
  right: 20px;
  font-size: 0.9rem;
  font-weight: 400;
  color: rgb(177, 177, 177);
}

.list {
  list-style-type: none;
  height: 380px;
  flex-shrink: 0;
  overflow-y: auto;
  border-bottom: 1px solid rgb(235, 234, 234);
  margin-bottom: 25px;
}

.list li {
  border-bottom: 0.8px solid rgb(235, 234, 234);
  padding: 12px 10px 12px 14px;
  position: relative;
}

.item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-weight: 300;
  font-size: 0.8rem;
  position: relative;
}

.item-info {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.item-info > * {
  margin-right: 8px;
}

.item-info span:nth-child(1) {
  color: rgb(141, 141, 141);
  flex: 1;
}

.item-info span:nth-child(2) {
  color: rgb(223, 73, 73);
  margin-right: 12px;
  flex: 2;
}

.item-info span:nth-child(3) {
  color: rgb(223, 73, 73);
  flex: 1;
}
/* ... */

